Fix okio version range for jclouds-okhttp
OSGi bundle for jclouds-okhttp should import okio package with correct
version range.
Currently, there is no version range specified, causing it to be wired
to a higher version than intended in complex environments that have more
than one bundle for okio installed.

--- a/drivers/okhttp/pom.xml
+++ b/drivers/okhttp/pom.xml
@@ -33,7 +33,7 @@
 
   <properties>
     <jclouds.osgi.export>org.jclouds.http.okhttp*;version="${project.version}"</jclouds.osgi.export>
-    <jclouds.osgi.import>org.jclouds*;version="${project.version}",*</jclouds.osgi.import>
+    <jclouds.osgi.import>org.jclouds*;version="${project.version}",${okio.osgi.import},*</jclouds.osgi.import>
   </properties>
 
   <dependencies>
