--- a/project/pom.xml
+++ b/project/pom.xml
@@ -226,6 +226,7 @@
     <guava.osgi.import>com.google.common.*;version="[16.0.1,20.0.0)"</guava.osgi.import>
     <guice.version>3.0</guice.version>
     <okhttp.version>2.2.0</okhttp.version>
+    <okio.osgi.import>okio;version="[1.2.0,1.3)"</okio.osgi.import>
     <surefire.version>2.17</surefire.version>
     <assertj-core.version>1.7.0</assertj-core.version>
     <assertj-guava.version>1.3.0</assertj-guava.version>
